--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,8 @@
 }
 
 :root {
-  --gradient-text: linear-gradient(89.97deg, #AE67FA 1.84%, #F49867 102.67%);
+  --gradient-text: conic-gradient(from 90deg at 50% 50%, rgba(64, 121, 94, 1) 0%, rgba(229, 43, 43, 1) 49%);
+  
   --gradient-bar: linear-gradient(103.22deg, #AE67FA -13.86%, #F49867 99.55%);
   
   --color-bg: #040C18;
