--- a/src/containers/posibility/posibility.scss
+++ b/src/containers/posibility/posibility.scss
@@ -1,25 +1,26 @@
 .posibility{
-    padding: 100px 0px;
+    padding: 80px 0px;
 
     .posibillity-section{
-        text-align: center;
+       
+        padding-top: 20%;
        h6{
            color:var(--color-text);
            font-weight: bold;
-           margin-bottom: 20px;
+           padding-bottom: 20px;
 
        }
 
        h1{
            font-size: 25px;
            font-weight: 500;
-           margin-bottom: 10px;
+          padding-bottom: 10px;
            
        }
 
        p{
            font-size: 14px;
-           margin-top: 30px;
+           padding-top: 30px;
            color:var(--color-text);
        }
 
@@ -27,5 +28,21 @@
            font-size:20px;
            color: var(--color-subtext);
        }
+     
+    }
+
+    .posibility-img{
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+
+        img{
+           width: 60%;
+           padding-top: 0;
+          object-fit:cover;
+        }
+
     }
 }
